--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
-[ ] why is MYR importing as id 2025
+[x] why is MYR importing as id 2025
 [ ] move where logic into own file
 [ ] generate nice types for faction names and snapshot types (with tests against DB)
